# BigSortCollection

./: .gitignore  CMakeLists.txt  LICENSE  README.md
big-sort-lib/: CMakeLists.txt
big-sort-lib/include/bigsortlib/: vars.h  visualm.h
big-sort-lib/src/: visualm.cpp
bubble-sort/: CMakeLists.txt  bubble.cpp
cocktail-sort/: CMakeLists.txt  cocktail.cpp
insertion-sort/: CMakeLists.txt  insertion.cpp
merge-sort/: CMakeLists.txt  merge.cpp
quick-sort/: CMakeLists.txt  quick.cpp
